maintainIT2/src/objects/BOM_Item_Master__c.object
<CustomObject>
    <description>Defines the Item Master Records for a Unique Service Bill of Material</description>
    <fields>
        <fullName>BOM_Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Bill of Material Quantity (Default Qty added to a Work Order when selecting the Item)</description>
        <inlineHelpText>Bill of Material Quantity (Default Qty added to a Work Order when selecting the Item)</inlineHelpText>
        <label>BOM Qty</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_of_Material__c</fullName>
        <description>Bill of Material</description>
        <inlineHelpText>Bill of Material</inlineHelpText>
        <label>Bill of Material</label>
        <referenceTo>Bill_of_Material__c</referenceTo>
        <relationshipLabel>Bill of Material Item Master List</relationshipLabel>
        <relationshipName>BOM_Item_Master</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Master__c</fullName>
        <description>Item Master</description>
        <inlineHelpText>Item Master</inlineHelpText>
        <label>Item Master</label>
        <referenceTo>Item_Master__c</referenceTo>
        <relationshipLabel>BOM Item Master List</relationshipLabel>
        <relationshipName>BOM_Item_Master</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>BOM Item Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>BOM Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Item Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>